<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCarsExpenses</string>
    <string name="action_settings">Settings</string>
    <string name="show_fillups">Fill-ups</string>
    <string name="show_services">Services</string>
    <string name="show_stats">Stats</string>
    <string name="all_cars">All cars</string>
    <string name="title_activity_show_fill_ups">Fill-ups</string>
    <string name="btnAddCar">Add car</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="engine">Engine</string>
    <string name="volume">Volume</string>
    <string name="registration_number">Registration number:</string>
    <string name="title_activity_show_services">Services</string>
    <string name="title_activity_show_stats">Stats</string>
    <string name="title_activity_add_car">Car Settings</string>
    <string name="title_activity_car_settings">Car settings</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnClear">Clear</string>
    <string name="no_added_records">No added records</string>
    <string name="not_correct_info">Some of the fields are not filled or filled incorrectly</string>
    <string name="btnAddFillUpRecord">Add fill-up record</string>
    <string name="date">Date</string>
    <string name="volumeCost">Volume price</string>
    <string name="odometer">Odometer</string>
    <string name="totalCost">Total Cost</string>
    <string name="gasStation">Gas station</string>

    <string-array name="engine_array">
        <item>Diesel</item>
        <item>Gas</item>
        <item>Petrol</item>
    </string-array>
    <string-array name="volume_array">
        <item>Gallons</item>
        <item>Litres</item>
    </string-array>

    <string name="title_activity_add_fill_up">AddFillUp</string>
    <string name="title_activity_all_cars">AllCars</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fill_ups">FillUps</string>
    <string name="title_activity_fill_up_settings">FillUpSettings</string>

</resources>
