<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation = "horizontal"
    tools:context=".MainActivity" >  
    
    <Button
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/show_fillups"
    android:onClick="showFillUps"
    />
    <Button
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/show_services" 
    android:onClick="showServices"
    />
    <Button
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/show_stats" 
    android:onClick="showStats"
    />
    <Button
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/all_cars" 
    android:onClick="allCars"
    android:drawableTop="@drawable/ic_action_new"    
    android:textColor="#FFFFFF"
    />
</LinearLayout>

